[package]
name = "paint-wasm"
version = "0.1.0"
authors = ["RomChung <thelns@vip.qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
js-sys = "*"
wasm-bindgen = "*"

[dependencies.web-sys]
version="0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window'
]